assets/scss/pages/_timeline.scss
main.--timeline {
    .timeline {
        &__item {
            position: relative;
            padding-top: $spacing-24;
            padding-bottom: $spacing-80;

            @include mobile {
                gap: $spacing-16;
            }

            &.--important {
                p {
                    color: var(--color-red);
                }

                blockquote {
                    border-left-color: rgba($color-red, 0.2);

                    cite, em {
                        color: var(--color-red);
                        opacity: 0.4;
                    }
                }
            }

            &::before {
                content: '';
                position: absolute;
                top: 0;
                left: $spacing-32;
                height: 1px;
                width: calc(100% - #{$spacing-64});
                background: var(--color-border);
                
                @include mobile {
                    left: $spacing-16;
                    width: calc(100% - #{$spacing-32});
                }
            }

            &__meta {
                align-self: flex-start;
                position: sticky;
                top: 128px;
                
                h3 {
                    margin-bottom: $spacing-8;
                }

                .relations {
                    li {
                        padding-left: $spacing-24;
                        position: relative;

                        a {
                            display: inline-flex;
                            flex-direction: column;
                            white-space: pre-line;
                            text-decoration: none;

                            .title {
                                text-decoration: underline;
                                text-underline-offset: 2px;
                            }

                            &:hover {
                                .title { text-decoration: none; }
                            }

                            .description {
                                color: var(--color-grey);
                            }
                        }

                        &::before {
                            content: '';
                            width: 10px;
                            height: 8px;
                            background-image: url("data:image/svg+xml,%3Csvg width='8' height='6' viewBox='0 0 8 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0.5 0V3V3.5H1H5.79289L4.64645 4.64645L5.35355 5.35355L7.35355 3.35355L7.70711 3L7.35355 2.64645L5.35355 0.646447L4.64645 1.35355L5.79289 2.5H1.5V0H0.5Z' fill='%23" + str-replace(#{$color-foreground}, '#', '') + "'/%3E%3C/svg%3E%0A");
                            background-repeat: no-repeat no-repeat;
                            background-position: center center;
                            background-size: cover;
                            position: absolute;
                            left: 0;
                            top: 9px;
                        }
                    }
                }
            }

            &__description {
                margin-bottom: $spacing-32;
            }

            &__cover {
                margin-top: 0;
                margin-bottom: $spacing-32;

                & + *:not(em) { margin-top: 0; }
            }

            p {
                & + blockquote { margin-top: $spacing-32; }
            }

            hr {
                height: 48px;
            }

            blockquote {
                transform: translate(0);
                margin: 0;
                border-left: 2px solid var(--color-border);
                padding-left: $spacing-16;

                & + p {
                    margin-top: $spacing-32;
                }

                p { 
                    @include Paragraph;
                    
                    em {
                        @include Paragraph($muted: true);
                    }
                }
            }
        }
    }
}

